FIX: wrap price in events cards && badge fix white-space

--- a/wp-content/themes/el-grazia/src/sass/core/_vars.scss
+++ b/wp-content/themes/el-grazia/src/sass/core/_vars.scss
@@ -46,7 +46,7 @@ $breakpoints: (
 
 //typography
 $font-path: '../fonts/';
-$font-main: 'MuseoSansCyrl', sans-serif;
+$font-main: 'MuseoSansCyrl';
 
 $h1-font-sizes: (
 		null : 40px,
